# UltraOS

./: Makefile  README.md
codes/dependency/k210-hal/: .gitignore
codes/dependency/k210-pac/: Cargo.toml
codes/dependency/riscv/: .gitignore  assemble.ps1
codes/fat32-fuse/: .gitignore  qemu_fs.sh
codes/os/: Cargo.toml  Makefile
codes/os/src/: main.rs
codes/simple_fat32/: Cargo.toml
doc/: FAT32.md  README.md  UltraOS.pptx  fs_kernel.md  测试.md  系统调用支持.md  问题.md
