[package]
name = "simple-fat32"
version = "0.0.1"
authors = ["Haochen Gong <1527198893@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The newest versions are described below, but they are not compatible with UltraOS's newest version.
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
[dependencies]
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
#os = {path = "../os"}
